Correo api google
Se ha creado un script que accede a un correo y descarga pdf, segun criterios.
Esos tickets son procesados por otro script para generar un excel con los datos qu nos interesa.
Se ha ha empezado la creacion de un bot que se metera en la pagina de mercadona a pedir las facturas de dichos tickets

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@
 /PDFautomat/LIDL_NO
 /PDFautomat/*.xlsx
 .DS_Store
+/PDFautomat/*.json
+/PDFautomat/MAKRO_NO
+/PDFautomat/MAKRO_SI
+/PDFautomat/TICKETS_MERCADONA_UNREAD
+/PDFautomat/TICKETS_MERCADONA_READ_8305
+/PDFautomat/TICKETS_MERCADONA_READ_8313
+/PDFautomat/TICKETS_MERCADONA_READ_REST
+
