BOT - LOGGERS - TARJETAS VALIDAS
BOT creado, funciona abriendo chrome manual, despues se encarga solo. Añadido bucle de 5 facturas con bot para limitar y evitar errores de tiempo

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@
 /PDFautomat/TICKETS_MERCADONA_READ_8313
 /PDFautomat/TICKETS_MERCADONA_READ_REST
 
+*.json
+*.env
+
+/PDFautomat/TICKETS_MERCADONA_READ
+/PDFautomat/TICKETS_MERCADONA_ERROR
+/PDFautomat/chrome-login-mercadona
+
